Fix alignment issues in layout

--- a/style-tpl.css
+++ b/style-tpl.css
@@ -1,12 +1,25 @@
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700';
 
 html, body {
-	width: 100%;
 	height: 100%;
 	font-family: 'Source Sans Pro', sans-serif;
 	display: grid;
 	align-items: center;
 	justify-content: center;
+}
+
+main {
+	display: grid;
+	align-items: center;
+	justify-content: center;
+  	grid-template-columns:
+    1fr
+    min(80ch, 95%)
+    1fr;
+}
+
+main > * {
+	grid-column: 2;
 }
 
 b {
@@ -16,41 +29,26 @@ b {
 h1 {
 	font-size: 36pt;
 	text-align: center;
-	width: min-content;
-  	min-width: 100%;
 }
 
 nav {
     display: grid;
+	align-items: center;
+	justify-content: center;
     gap: 1rem;
     grid-template-columns: repeat(5, minmax(0, 1fr));
     text-align: center;
-    padding: 10px;
+    padding: 12px 0px;
 	font-size: 20pt;
-
-}
-
-@media screen and (max-width: 950px) {
-	nav {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-}
-
-@media screen and (max-width: 550px) {
-	nav {
-		font-size: 18pt;
-	}
 }
 
 p {
 	padding: 12px 0px;
-	font-size: 18pt;
+	font-size: 16pt;
 	font-weight: 300;
 	line-height: 1.9;
 	text-align: justify;
 	word-break: normal;
-	width: min-content;
-  	min-width: 100%;
 }
 
 a {
@@ -59,6 +57,7 @@ a {
 	display: inline-block;
 	color: black;
 	margin: 0 5px;
+	font-size: 16pt;
 	transition: color ease 0.15s;
 
 	&::after {
@@ -79,5 +78,20 @@ a {
 		&::after {
 			height: 100%;
 		}
+	}
+}
+
+@media screen and (max-width: 950px) {
+	nav {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+		font-size: 14pt;
+	}
+
+	p {
+		font-size: 14pt;
+	}
+
+	h1 {
+		font-size: 30pt;
 	}
 }
